@@ -1,3 +1,8 @@
+2007-12-12  David Bateman  <dbateman@free.fr>
+
+	* DLD-FUNCTIONS/sparse.cc (Fsparse): Check for scalar arguments
+	for 2 argument version.
+
 2007-12-12  John W. Eaton  <jwe@octave.org>
 
 	* graphics.h.in (class axes) Add the layer property.
